[gd_scene load_steps=4 format=3 uid="uid://dd3cou8u0k7vm"]

[ext_resource type="Script" path="res://Scripts/Ad.gd" id="1_kjc62"]
[ext_resource type="Texture2D" uid="uid://dteibtodo5d3u" path="res://assets/ads/AD2.png" id="2_wjbnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gg63v"]
size = Vector2(36, 20)

[node name="Ad2" type="Node2D"]
script = ExtResource("1_kjc62")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("2_wjbnv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(133, -107)
shape = SubResource("RectangleShape2D_gg63v")

[connection signal="input_event" from="Area2D" to="." method="ad2_event"]
